#MESSAGE(STATUS "This is additionan include path" ${CMAKE_INCLUDE_PATH})


ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(lamda)
ADD_SUBDIRECTORY(init)
ADD_SUBDIRECTORY(except)
ADD_SUBDIRECTORY(keyFunc)
ADD_SUBDIRECTORY(rightRef)
ADD_SUBDIRECTORY(atomic)
ADD_SUBDIRECTORY(mutex)

#ADD_SUBDIRECTORY(jk_qt)

#SET(PROJECT_NAME "particle01")
#START_EXAMPLE()


